# cuckoo

./: .stylish-haskell.yaml  CHANGELOG.md  Dockerfile  README.md  cuckoobird.cabal
app/: CuckooLib.hs  CuckooNest.hs  Main.hs
data/: animals.txt  companies.txt  domains.txt  first-names.txt  jobs.txt  rivers.txt  street-names.txt
lib/: CuckooLib.hs  CuckooNest.hs  Graph.hs
