cabal-version:      2.4
name:               cuckoobird
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable cuckoobird
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: TupleSections, OverloadedStrings
    build-depends:    
        base >= 4.6 && < 5
      , mtl ^>=2.2.2
      , containers ^>= 0.6.5.1
      , random ^>=1.2.1.1
      , text ^>=1.2.5.0
      , cuckoobird-lib
      , scotty >=0.12
      , aeson >= 2.1.0.0
    hs-source-dirs:   app
    default-language: Haskell2010

library cuckoobird-lib
    -- Modules included in this executable, other than Main.
    exposed-modules:
        CuckooLib
      , CuckooNest
      , Graph
    -- LANGUAGE extensions used by modules in this package.
    default-extensions: TupleSections, OverloadedStrings
    build-depends:    
        base >= 4.6 && < 5
      , mtl ^>=2.2.2
      , random ^>=1.2.1.1
      , aeson >= 2.1.0.0
      , time >= 1.11.1.1
      , containers ^>= 0.6.5.1
      , transformers ^>= 0.5.6.2
      , text ^>=1.2.5.0
    hs-source-dirs:   lib
    default-language: Haskell2010